--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			document.body.appendChild( renderer.domElement );
 
 			const geometry = new THREE.BoxGeometry();
-			const material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+			const material = new THREE.MeshBasicMaterial( { color: 0x666699 } );
 			const cube = new THREE.Mesh( geometry, material );
 			scene.background = new THREE.Color( 0xffffff );
 			scene.add( cube );
