--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			scene.add( grass );
 			scene.add( cube );
 			
-			const firstpersoncam = new THREE.FirstPersonControls(camera, cube);
+			const firstpersoncam = new FirstPersonControls(camera, cube);
 			firstpersoncam.lookSpeed = 0.8;
 			firstpersoncam.movementSpeed = 5;
 
