--- a/index.html
+++ b/index.html
@@ -29,9 +29,17 @@
 			const cube = new THREE.Mesh( geometry, material );
 			const grass = new THREE.Mesh( geometry2, grassmaterial );
 			scene.background = new THREE.Color( 0x0073e6 );
+			
+			cube.position = 0.5
+			
+			grass.scale.y = 0.5
+			grass.scale.x = 500;
+			grass.scale.z = 500;
+			
 			scene.add( grass );
 			scene.add( cube );
-
+			
+			camera.position.y = 5;
 			camera.position.z = 5;
 
 			function animate() {
