--- a/index.html
+++ b/index.html
@@ -51,22 +51,16 @@
 			function setupKeyControls() {
 			  document.onkeydown = function(e) {
 				switch (e.keyCode) {
-				  case 87:
+				  case 87: //w
 				  cube.position.y += 0.1;
 				  break;
-				  case 83:
+				  case 83: //s
 				  cube.position.y -= 0.1;
 				  break;
-				  case 40:
-				  cube.position.z += 0.1;
-				  break;
-				  case 38:
-				  cube.position.z -= 0.1;
-				  break;
-				  case 65:
+				  case 65: //a
 				  cube.position.x -= 0.1;
 				  break;
-				  case 68:
+				  case 68: //d
 				  cube.position.x += 0.1;
 				  break;
 				}
