--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 			const grass = new THREE.Mesh( geometry, grassmaterial );
 			scene.background = new THREE.Color( 0x0073e6 );
 			
-			cube.position.y = 0.5
+			cube.position.y = 1;
 			
-			grass.scale.y = 0.5
+			grass.scale.y = 0.5;
 			grass.scale.x = 500;
 			grass.scale.z = 500;
 			
