--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 			  document.onkeydown = function(e) {
 				switch (e.keyCode) {
 				  case 87: //w
-				  cube.position.y += 0.1;
+				  cube.position.z += 0.1;
 				  break;
 				  case 83: //s
-				  cube.position.y -= 0.1;
+				  cube.position.z -= 0.1;
 				  break;
 				  case 65: //a
 				  cube.position.x -= 0.1;
